@@ -1,13 +1,29 @@
 package com.rush.domain.map;
 
-import com.rush.domain.orgaism.Organism;
+import com.rush.domain.organism.Organism;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Cell {
 
-   private final List<Organism> organisms = new ArrayList<>();
+    private final List<Organism> organisms = new ArrayList<>();
+    private final int row;
+    private final int col;
+
+    public Cell(int row, int col) {
+        this.row = row;
+        this.col = col;
+    }
+
+    public int getRow() {
+        return row;
+    }
+
+    public int getCol() {
+        return col;
+    }
 
    public synchronized void add(Organism organism) {
       organisms.add(organism);
@@ -25,7 +41,7 @@ public class Cell {
       return organisms.stream()
               .filter(type::isInstance)
               .map(type::cast)
-              .toList();
+              .collect(Collectors.toList());
    }
 
    public synchronized int count(Class<? extends Organism> type) {
